--- a/laboratory_detail.html
+++ b/laboratory_detail.html
@@ -25,18 +25,6 @@
 		<!--Demo [ DEMONSTRATION ]-->
 		<link href="css/demo/nifty-demo.min.css" rel="stylesheet">
 		<link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-		<!--Bootstrap Table [ OPTIONAL ]-->
-		<link href="plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet">
-
-		<!--X-editable [ OPTIONAL ]-->
-		<link href="plugins/x-editable/css/bootstrap-editable.css" rel="stylesheet">
-
-		<!--Summernote [ OPTIONAL ]-->
-		<link href="plugins/summernote/summernote.min.css" rel="stylesheet">
-
-		<!--Dropzone [ OPTIONAL ]-->
-		<link href="plugins/dropzone/dropzone.min.css" rel="stylesheet">
-
 		<!--Animate.css [ OPTIONAL ]-->
 		<link href="plugins/animate-css/animate.min.css" rel="stylesheet">
 
@@ -68,24 +56,6 @@
 		<script src="js/demo/nifty-demo.min.js"></script>
 
 		<script src="js/atits_pc_js/laboratory_detail.js"></script>
-
-		<!--X-editable [ OPTIONAL ]-->
-		<script src="plugins/x-editable/js/bootstrap-editable.min.js"></script>
-
-		<!--Bootstrap Table [ OPTIONAL ]-->
-		<script src="plugins/bootstrap-table/bootstrap-table.min.js"></script>
-
-		<!--Summernote [ OPTIONAL ]-->
-		<script src="plugins/summernote/summernote.min.js"></script>
-
-
-		<!--Dropzone [ OPTIONAL ]-->
-		<script src="plugins/dropzone/dropzone.min.js"></script>
-
-
-		<!--Bootbox Modals [ OPTIONAL ]-->
-		<script src="plugins/bootbox/bootbox.min.js"></script>
-
 
 		<link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
 
@@ -608,7 +578,7 @@
 			
 											<!--Menu list item-->
 											<li>
-												<a href="#">
+												<a href="regulation.html">
 													<i class="fa fa-book"></i>
 													<span class="menu-title">
 															<strong>规章制度</strong>
@@ -626,7 +596,7 @@
 											</li>
 			
 											<!--Menu list item-->
-											<li>
+											<li id="taskProgress">
 												<a href="taskProgress.html">
 													<i class="fa fa-spinner"></i>
 													<span class="menu-title">
