--- a/station.html
+++ b/station.html
@@ -644,7 +644,7 @@
     
                                     <!--Menu list item-->
                                     <li>
-                                        <a href="#">
+                                        <a href="regulation.html">
                                             <i class="fa fa-book"></i>
                                             <span class="menu-title">
                                                     <strong>规章制度</strong>
@@ -652,7 +652,7 @@
                                         </a>
                                     </li>
                                     <!--Menu list item-->
-                                    <li>
+                                    <li id="taskProgress">
                                         <a href="task.html">
                                             <i class="fa fa-list-ol"></i>
                                             <span class="menu-title">
