--- a/system_detail.html
+++ b/system_detail.html
@@ -623,7 +623,7 @@
                                         <!--Summernote-->
                                         <!--===================================================-->
                                         <div id="demo-summernote" >
-                                            <h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;">请在这写!</span><br></h4><h4><font color="#9c9c94"></font></h4>
+                                            <h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;"></span><br></h4><h4><font color="#9c9c94"></font></h4>
                                         </div>
                                         <!--===================================================-->
                                         <!-- End Summernote -->
@@ -789,7 +789,7 @@
     
                                     <!--Menu list item-->
                                     <li>
-                                        <a href="#">
+                                        <a href="regulation.html">
                                             <i class="fa fa-book"></i>
                                             <span class="menu-title">
                                                     <strong>规章制度</strong>
@@ -807,7 +807,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li>
+                                    <li id="taskProgress">
                                         <a href="taskProgress.html">
                                             <i class="fa fa-spinner"></i>
                                             <span class="menu-title">
