--- a/test_manager.html
+++ b/test_manager.html
@@ -363,12 +363,12 @@
                     <div class="modal-body" style="text-align: center">
                         <input type="hidden" name="id">
                         体系办对首席打分权重：<br><input type="number" name="a" style="text-align: center"><br>
-                        副首席、研究室主任、实验站站长对首席打分权重：<br><input type="number" name="b" style="text-align: center"><br>
+                        副首席、岗位专家、实验站站长对首席打分权重：<br><input type="number" name="b" style="text-align: center"><br>
                         外聘专家对首席打分权重：<br><input type="number"name="c" style="text-align: center"><br>
                         <div></div>
                         体系办、外聘专家对副首席打分权重：<br><input type="number"name="d" style="text-align: center"><br>
                         首席对副首席打分权重：<br><input type="number"name="e" style="text-align: center"><br>
-                        研究室主任、实验站站长对副首席打分权重：<br><input type="number"name="f" style="text-align: center"><br>
+                        岗位专家、实验站站长对副首席打分权重：<br><input type="number"name="f" style="text-align: center"><br>
                         <br>
                         <button id="testWeight_btn" class="btn btn-success">修改</button>
                     </div>
@@ -390,8 +390,8 @@
                     </div>
                     <div class="modal-body" style="text-align: center">
                         <input name="id2" type="hidden">
-                        首席、副首席对研究室主任、实验站站长打分权重：<br><input type="number" name="g" style="text-align: center"><br>
-                        研究室主任、实验站站长对研究室主任、实验站站长打分权重：<br><input type="number" name="h" style="text-align: center"><br>
+                        首席、副首席对岗位专家、实验站站长打分权重：<br><input type="number" name="g" style="text-align: center"><br>
+                        岗位专家、实验站站长对岗位专家、实验站站长打分权重：<br><input type="number" name="h" style="text-align: center"><br>
                         <br>
                         <button id="testWeight2_btn" class="btn btn-success">修改</button>
                     </div>
@@ -665,7 +665,7 @@
     
                                     <!--Menu list item-->
                                     <li>
-                                        <a href="#">
+                                        <a href="regulation.html">
                                             <i class="fa fa-book"></i>
                                             <span class="menu-title">
                                                     <strong>规章制度</strong>
@@ -683,7 +683,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li>
+                                    <li id="taskProgress">
                                         <a href="taskProgress.html">
                                             <i class="fa fa-spinner"></i>
                                             <span class="menu-title">
