--- a/harvest_detail.html
+++ b/harvest_detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>通知公告</title>
+    <title>重大成果</title>
 
     <!--STYLESHEET-->
     <!--=================================================-->
@@ -56,7 +56,7 @@
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
 
-    <script src="js/atits_pc_js/notice_detail.js"></script>
+    <script src="js/atits_pc_js/harvest_detail.js"></script>
 
 
     <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
@@ -331,7 +331,7 @@
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
             <div id="page-title">
-                <h1 class="page-header text-overflow">通知公告详情</h1>
+                <h1 class="page-header text-overflow">重大成果详情</h1>
 
                 <!--Searchbox-->
                 <div class="searchbox">
@@ -371,7 +371,7 @@
                             <div class="row ">
                                 <ul class="pager pager-rounded">
                                     <li class="previous">
-                                        <a href="notice.html"><i class="demo-psi-arrow-left"></i> 返回</a>
+                                        <a href="harvest.html"><i class="demo-psi-arrow-left"></i> 返回</a>
                                     </li>
                                 </ul>
                                 <div class="col-lg-10 col-lg-offset-1 ">
