--- a/user.html
+++ b/user.html
@@ -569,7 +569,7 @@
     
                                     <!--Menu list item-->
                                     <li>
-                                        <a href="#">
+                                        <a href="regulation.html">
                                             <i class="fa fa-book"></i>
                                             <span class="menu-title">
                                                     <strong>规章制度</strong>
@@ -587,7 +587,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li>
+                                    <li id="taskProgress">
                                         <a href="taskProgress.html">
                                             <i class="fa fa-spinner"></i>
                                             <span class="menu-title">
